[package]
name = "rusty_meta_threads"
version = "0.1.2"
edition = "2021"
description = "Community Rust SDK for integrating with Meta Threads API"
repository = "https://github.com/Thesephi/rusty_meta_threads.git"
license = "MIT"
categories = ["web-programming"]
keywords = ["threads", "meta", "api", "sdk"]

[lib]
name = "rusty_meta_threads"
path = "src/mod.rs"
crate-type = ["rlib"]

[dependencies]
url = "2.5.4"
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.22"
